--- a/index.html
+++ b/index.html
@@ -1,45 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Adventure Time</title>
-		<link rel="stylesheet" href="Style.css">
-	</head>
-	<body>
-		<header>
-			<nav>
-				<img src="images/logo.png" class="logo">
-				<ul class="nav-links">
-					<li><a href="#">Popular Places</a></li>
-					<li><a href="#">Travel Outside</a></li>
-					<li><a href="#">Online Packages</a></li>
-				</ul>
-				<a href="#" class="register-btn" >Register Now</a>
-			</nav>
-			<div class="container">
-				<h1>Find Your Next Stay</h1>
-				<div class="search-bar">
-					<form>
-						<div>
-							<label>Location</label>
-							<input type="text" placeholder="Where are you going?">
-						</div>
-						<div>
-							<label>Check in</label>
-							<input type="text" placeholder="Add Date">
-						</div>
-						<div>
-							<label>Check out</label>
-							<input type="text" placeholder="Add Date">
-						</div>
-						<div>
-							<label>Guest</label>
-							<input type="text" placeholder="Guest">
-						</div>
-						<button type="submit"><img src="images/search.png"></button>
-					</form>
-				</div>
+<head>
+	<meta charset="UTF-8">
+	<title>Adventure Time</title>
+	<link rel="stylesheet" href="Style.css">
+</head>
+<body>
+	<header>
+		<nav>
+			<img src="images/logo.png" class="logo">
+			<ul class="nav-links">
+				<li><a href="#">Popular Places</a></li>
+				<li><a href="#">Travel Outside</a></li>
+				<li><a href="#">Online Packages</a></li>
+			</ul>
+			<a href="#" class="register-btn" >Register Now</a>
+		</nav>
+		<div class="container">
+			<h1>Find Your Next Stay</h1>
+			<div class="search-bar">
+				<form>
+					<div class="location-input">
+						<label>Location</label>
+						<input type="text" placeholder="Where are you going?">
+					</div>
+					<div>
+						<label>Check in</label>
+						<input type="text" placeholder="Add Date">
+					</div>
+					<div>
+						<label>Check out</label>
+						<input type="text" placeholder="Add Date">
+					</div>
+					<div>
+						<label>Guest</label>
+						<input type="text" placeholder="Guest">
+					</div>
+					<button type="submit"><img src="images/search.png"></button>
+				</form>
 			</div>
-		</header>
-	</body>
+		</div>
+	</header>
+	<div class="container">
+		<h2 class="sub-title">Exclusives</h2>
+		<div class="exclusives">
+			<div>
+				<img src="images/image-1.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-2.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-3.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-4.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-5.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-6.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-7.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-8.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-9.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+			<div>
+				<img src="images/image-10.png">
+				<span>
+					<h3>London</h3>
+					<p>Starts - $250</p>
+				</span>
+			</div>
+		</div>
+		<h2 class="sub-title">Trending Places</h2>
+		<div class="trending">
+			<div>
+				<img src="images/dubai.png">
+				<h3>Dubai</h3>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
